// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelCategory /> renders default 1`] = `
.c0 {
  display: inherit;
  padding: 1rem 1.5rem;
  position: relative;
  background: transparent;
  overflow: hidden;
  font-size: 1.3rem;
  cursor: pointer;
}

.c0::before {
  content: '';
  width: 90%;
  height: 90%;
  position: absolute;
  top: 5%;
  left: 5%;
  z-index: 20;
  background: #fff;
  border-radius: 0.5rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  transition: transform 0.15s ease-in-out;
  transform: translateX(-200%);
}

<label
  className="c0"
/>
`;

exports[`<LabelCategory /> renders with theme 1`] = `
.c0 {
  display: inherit;
  padding: 1rem 1.5rem;
  position: relative;
  background: transparent;
  overflow: hidden;
  font-size: 1.3rem;
  cursor: pointer;
}

.c0::before {
  content: '';
  width: 90%;
  height: 90%;
  position: absolute;
  top: 5%;
  left: 5%;
  z-index: 20;
  background: #202124;
  border-radius: 0.5rem;
  box-shadow: none;
  transition: transform 0.15s ease-in-out;
  transform: translateX(-200%);
}

<label
  className="c0"
/>
`;
